--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^14.0.0",
     "@ngx-translate/core": "^14.0.0",
     "moment": "^2.29.4",
+    "ngx-toastr": "^14.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
