update something new

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
-              "moment"
+              "moment",
+              "overlayscrollbars"
             ]
           },
           "configurations": {
