--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/core": "^14.0.0",
     "moment": "^2.29.4",
     "ngx-toastr": "^14.2.1",
+    "overlayscrollbars": "^1.13.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -33,6 +34,7 @@
     "@angular/cli": "~14.2.1",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/overlayscrollbars": "^1.12.1",
     "autoprefixer": "^10.4.8",
     "chroma-js": "^2.4.2",
     "jasmine-core": "~4.3.0",
