--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@ngx-translate/core": "^14.0.0",
+    "hammerjs": "^2.0.8",
     "moment": "^2.29.4",
+    "ngx-image-cropper": "^6.3.2",
     "ngx-toastr": "^14.2.1",
     "overlayscrollbars": "^1.13.1",
     "rxjs": "~7.5.0",
