--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hammerjs": "^2.0.8",
     "moment": "^2.29.4",
     "ngx-image-cropper": "^6.3.2",
+    "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^14.2.1",
     "overlayscrollbars": "^1.13.1",
     "rxjs": "~7.5.0",
