--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@angular/router": "^17.0.8",
     "@ngx-translate/core": "^14.0.0",
     "hammerjs": "^2.0.8",
+    "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
     "ngx-image-cropper": "^6.3.2",
     "ngx-pagination": "^6.0.3",
-    "ngx-toastr": "^14.2.1",
+    "ngx-toastr": "^18.0.0",
     "overlayscrollbars": "^1.13.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -38,7 +39,7 @@
     "@angular/compiler-cli": "^17.0.8",
     "@types/jasmine": "~4.0.0",
     "@types/overlayscrollbars": "^1.12.1",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.16",
     "chroma-js": "^2.4.2",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
@@ -46,8 +47,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "typescript": "~5.2.2"
   }
 }
